samples/_failures_safe/1761536759_f91ec7_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_9ef4f5fe.c: In function ‘queue_enqueue’:
./samples/SAFE/__tmp_9ef4f5fe.c:190:5: error: expected declaration or statement at end of input
  190 |     }
      |     ^
